syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "JobListingsDatabaseService.gRPC";

service AdvertisementgRPC
{
    rpc getAdvertisement (getAdvertisementParams) returns (AdvertisementModel);

    rpc postAdvertisements (AdvertisementModel) returns (getAdvertisementParams);
}


message getAdvertisementParams {}

message AdvertisementModel {
    google.protobuf.StringValue uuid = 1;
    google.protobuf.Timestamp expires = 2;
    google.protobuf.StringValue workLocation = 3;
    google.protobuf.StringValue title = 4;
    google.protobuf.StringValue description = 5;
    google.protobuf.StringValue jobTitle = 6;
    google.protobuf.StringValue employer = 7;
    google.protobuf.StringValue engagementType = 8;

}